chamber/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Changa:wght@700&family=Gabarito&display=swap');

:root {
/* --- Colors --- */
    --page-background: #eaf1f9;
    --main-color: #023368;
    --secondary-color: #014397;
    --accent-color: #f6ae2d;
    --text-on-dark: #eaf1f9;
    --text-on-white: #555;

    --headings-font: 'Changa', sans-serif;
    --paragraphs-font: 'Gabarito', cursive;

    --border-radius: .4rem;

    --transition-time: .2s;
}

body {
    background-color: var(--page-background);
}

#content {
    display: block;
    margin: 0 auto;
    min-width: 350px;
}

header {
    color: #FFFFFF;
    background-color: var(--main-color);
}

h1, h2, h3, h4, h5, h6 {
    margin: 0;
    padding: 0;
    font-family: var(--headings-font);
}

p, a {
    margin: 0;
    padding: 0;
    color: var(--text-on-dark);
    font-family: var(--paragraphs-font);
}

footer {
    margin: 2rem 0 0 0;
    padding: 1rem;
    color: var(--text-on-dark);
    background-color: var(--main-color);
}

/* ------ HEADER ------ */
#top-header {
    display: flex;
    padding: 1em;
    justify-content: center;
    align-items: center;
}

.logo {
    height: 6.9rem;
}

#top-header h1 {
    text-align: center;
}

#navbar {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    padding: .5rem;
    justify-content: center;
    align-items: center;
    background-color: var(--secondary-color);
}

#menubutton {
    margin: 1rem;
    width: 2rem;
    height: 2rem;
    line-height: 1.5rem;
    font-size: 1.5rem;
	border: none;
	background-color: transparent;
	color: var(--text-on-dark);
    transition: var(--transition-time);
}

#menubutton::before {
	content: "☰";
}

#menubutton:hover {
    color: #FFFFFF;
    cursor: pointer;
}

nav {
    display: none;
}

/* when the button is clicked - the open class is toggle (added/removed) and accounted for here */
#menubutton.openbutton {
    transform: rotate(270deg);
    transition: var(--transition-time);
}

#menubutton.openbutton::before {
	content: "\276F";
    /* alternative: ✕ */
}

.opennav {
    display: flex;
}
/* ------ */

nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

nav ul li {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: .5rem;
}

.navlinks {
    border-bottom: solid 0.2rem transparent;
    color: var(--text-on-dark);
    text-decoration: none;
    text-transform: uppercase;
    font-size: 1.5rem;
    font-weight: 400;
    transition: var(--transition-time);
}

.navlinks:hover {
    border-bottom: solid 0.2rem #f6ae2d;
    color: #FFFFFF;
    font-weight: 800;
    transition: var(--transition-time);
}

#active {
    border-bottom: solid 0.2rem #f6ae2d;
    font-weight: 800;
}

/* ------ MAIN ------ */
main {
    display: grid;
    grid-template-columns: .2rem 1fr .2rem;
    gap: 2rem .2rem;
    margin: 0 auto;
    max-width: 500px;
    min-width: 350px;
}

.hero {
    position: relative;
    grid-column: 1/4;
    grid-row: 1/2;
    width: 100%;
    max-width: 500px;
    height: auto;
}

.hero-background {
    width: 100%;
    height: 100%;
}

.hero-button-position {
    padding: .1rem;
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.hero-button {
    display: block;
    margin: .1rem;
    padding: 1.5rem 2rem;
    color: #FFFFFF;
    min-width: 145px;
    text-align: center;
    font-size: 2rem;
    font-family: var(--headings-font);
    text-decoration: underline;
    text-decoration-thickness: .2rem;
    text-decoration-color: var(--accent-color);
    text-transform: uppercase;
    border: solid .2rem transparent;
    border-radius: 10rem;
    background-color: var(--main-color);
    transition: var(--transition-time);
}

.hero-button:hover {
    border: solid .2rem #FFFFFF;
    box-shadow: 0 0 0 .2rem var(--accent-color);
    background-color: var(--secondary-color);
    transition: var(--transition-time);
}

section {
    padding: 1.5rem;
    color: #FFFFFF;
    border-radius: var(--border-radius);
    background-color: var(--secondary-color);
}

.card-header {
    color: #FFFFFF;
}

.card-events {
    grid-column: 2/3;
    grid-row: 2/3;
}

.event {
    margin: 1rem;
    padding: 1.5rem .5rem;
    border: solid 1px var(--accent-color);
    border-left: none;
    border-right: none;
}

.event p {
    color: var(--text-on-dark);
}

.event a {
    font-weight: 800;
    text-decoration: underline;
    transition: var(--transition-time);
}

.event a:hover {
    color: var(--accent-color);
    transition: var(--transition-time);
}

.card-weather {
    grid-column: 2/3;
    grid-row: 3/4;
}

.card-spotlights {
    grid-column: 2/3;
    grid-row: 4/5;
}

.spotlight {
    margin: 1rem;
    padding: 1.5rem;
    border: solid .2rem var(--secondary-color);
    border-radius: var(--border-radius);
    background-color: #FFFFFF;
    transition: var(--transition-time);
}

.spotlight:hover {
    box-shadow: 0 0 0 .2rem var(--accent-color);
    transition: var(--transition-time);
}

.spotlight h3 {
    color: var(--main-color);
}

.spotlight .ad-text {
    display: block !important;
    margin: 0 0 1rem 0;
    text-align: right;
    color: var(--secondary-color);
}

.spotlight p {
    text-align: center;
    color: var(--text-on-white);
}

/* ------ FOOTER ------ */
footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

#top-footer {
    display: grid;
    grid-template-columns: auto auto;
    padding: 1em;
    justify-content: center;
    align-items: center;
}

#top-footer .logo {
    grid-column: 1/2;
    grid-row: 1/3;
    height: 6.9rem;
}

#top-footer h1 {
    grid-column: 2/3;
    grid-row: 1/2;
    font-size: 1.5rem;
    text-align: left;
}

#top-footer p {
    grid-column: 2/3;
    grid-row: 2/3;
    text-align: left;
}

.business-card {
    display: flex;
    justify-content: center;
    align-items: center;
    grid-column: 1/3;
    grid-row: 3/4;
    margin: 2rem;
    text-align: center;
}

.business-card p {
    text-align: center;
}

.business-card a {
    text-decoration: underline;
    text-decoration-color: transparent;
    transition: var(--transition-time);
}

.business-card a:hover {
    text-decoration: underline;
    text-decoration-color: var(--accent-color);
    transition: var(--transition-time);
}

.social {
    grid-column: 1/3;
    grid-row: 4/5;
    text-align: center;
}

.social a img {
    margin: 0 .4em;
    width: 40px;
    height: auto;
    padding: .2em;
    border: none;
    border-radius: 50%;
    filter: contrast(0) brightness(2);
    transition: var(--transition-time);
}

.social a img:hover {
    background-color: #FFFFFF;
    filter: none;
    box-shadow: 0 0 0 .2rem var(--accent-color);
    transition: var(--transition-time);
}

.vertical-line {
    margin: 1.5rem;
    border-top: solid .05rem var(--text-on-white);
    width: 100%;
}

#copyrightYear {
    text-align: center;
}

#lastModified {
    margin: 1rem 0 0 0;
    text-align: center;
    color: var(--text-on-dark);
    font-size: .8rem;
}

